third_party/WebKit/Source/WebCore/html/HTMLTitleElement.cpp
@@ -50,7 +50,7 @@ PassRefPtr<HTMLTitleElement> HTMLTitleElement::create(const QualifiedName& tagNa
 Node::InsertionNotificationRequest HTMLTitleElement::insertedInto(ContainerNode* insertionPoint)
 {
     HTMLElement::insertedInto(insertionPoint);
-    if (insertionPoint->inDocument())
+    if (inDocument() && !isInShadowTree())
         document()->setTitleElement(m_title, this);
     return InsertionDone;
 }
@@ -58,7 +58,7 @@ Node::InsertionNotificationRequest HTMLTitleElement::insertedInto(ContainerNode*
 void HTMLTitleElement::removedFrom(ContainerNode* insertionPoint)
 {
     HTMLElement::removedFrom(insertionPoint);
-    if (insertionPoint->inDocument())
+    if (insertionPoint->inDocument() && !insertionPoint->isInShadowTree())
         document()->removeTitle(this);
 }
 
@@ -66,8 +66,12 @@ void HTMLTitleElement::childrenChanged(bool changedByParser, Node* beforeChange,
 {
     HTMLElement::childrenChanged(changedByParser, beforeChange, afterChange, childCountDelta);
     m_title = textWithDirection();
-    if (inDocument())
-        document()->setTitleElement(m_title, this);
+    if (inDocument()) {
+        if (!isInShadowTree())
+            document()->setTitleElement(m_title, this);
+        else
+            document()->removeTitle(this);
+    }
 }
 
 String HTMLTitleElement::text() const
